--- a/app/src/main/res/layout/voice_translation.xml
+++ b/app/src/main/res/layout/voice_translation.xml
@@ -1,133 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_color">
 
-    <!-- 导航框 -->
-    <LinearLayout
+    <!-- 语音输入区域 -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/voice_input_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EDEDED"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        android:gravity="center_vertical|center_horizontal">
+        android:layout_centerInParent="true"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
 
-        <!-- 左侧标题 -->
-        <TextView
-            android:layout_width="351dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="欢迎使用Innotranslate"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <!-- 右侧更多选项 -->
-        <ImageView
-            android:id="@+id/more_options_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:src="@drawable/ic_more_vert_black_24dp" />
-    </LinearLayout>
+            <!-- 语音输入按钮 -->
+            <ImageView
+                android:id="@+id/voice_input_button"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_mic_active"
+                android:background="@drawable/mic_button_background"
+                android:contentDescription="@string/voice_input_button" />
 
-    <!-- 分割线 -->
-    <View
-        android:id="@+id/divider"
+            <!-- 语音输入提示文本 -->
+            <TextView
+                android:id="@+id/voice_input_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="请按住说话"
+                android:textColor="@color/text_color"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <!-- 语音输入结果文本 -->
+            <TextView
+                android:id="@+id/voice_input_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="识别结果将显示在这里"
+                android:textColor="@color/text_color_secondary"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <!-- 底部导航栏 -->
+    <LinearLayout
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/navigation_bar"
-        android:background="#FFFFFF" />
-
-    <!-- 翻译搜索框 -->
-
-    <!-- 底部按钮 -->
-
-
-    <LinearLayout
-        android:id="@+id/search_bar"
-        android:layout_width="374dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/divider"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-282dp"
-        android:layout_marginEnd="21dp"
-        android:background="#E6E6FA"
+        android:layout_alignParentBottom="true"
+        android:background="@color/bottom_navigation_background"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:paddingVertical="8dp">
 
-        <!-- 翻译输入框 -->
-        <EditText
-            android:id="@+id/search_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="请输入要翻译的内容"
-            android:textColorHint="#A9A9A9" />
-
-        <!-- 搜索图标 -->
-        <ImageView
-            android:id="@+id/search_icon"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:src="@drawable/ic_search_black_24dp" />
-
-        <!-- 搜索按钮 -->
-        <TextView
-            android:id="@+id/language_selector"
-            android:layout_width="5dp"
-            android:layout_height="22dp"
-
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/navigation_bar"
-        android:layout_width="283dp"
-        android:layout_height="157dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="268dp"
-        android:layout_marginEnd="62dp"
-        android:background="#FFC0CB"
-        android:orientation="horizontal"
-        android:padding="16dp">
-
-        <!-- 选择翻译前的语言的下拉框 -->
-        <Spinner
-            android:id="@+id/text_language_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center_horizontal"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/spinner_background" />
-
-        <!-- 中间文本视图 -->
-
-        <!-- 选择翻译后的语言的下拉框 -->
-
-        <!-- 右侧更多选项 -->
-
-        <!-- 中间图标 -->
-        <ImageView
-            android:id="@+id/translate_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="24dp"
-            android:src="@drawable/translate_icon" />
-
-        <Spinner
-            android:id="@+id/translated_language_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/spinner_background" />
+        <!-- 其他底部按钮可以在这里添加，与主页布局类似 -->
 
     </LinearLayout>
 
-    <LinearLayout
+</RelativeLayout>
+<LinearLayout
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
