--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EDEDED"
+        android:background="#ededed"
         android:orientation="horizontal"
         android:padding="16dp"
         android:gravity="center_vertical|center_horizontal">
@@ -17,7 +17,8 @@
             android:layout_width="351dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="欢迎使用Innotranslate"
+            android:text="欢迎使用 InnoTranslate"
+            android:typeface="serif"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -52,18 +53,9 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="-282dp"
         android:layout_marginEnd="21dp"
-        android:background="#E6E6FA"
+        android:background="#c7c7c7"
         android:orientation="horizontal"
         android:padding="16dp">
-
-        <!-- 翻译输入框 -->
-        <EditText
-            android:id="@+id/search_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="请输入要翻译的内容"
-            android:textColorHint="#A9A9A9" />
 
         <!-- 搜索图标 -->
         <ImageView
@@ -80,8 +72,20 @@
 
             android:gravity="center"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
+        <!-- 翻译输入框 -->
+        <EditText
+            android:id="@+id/search_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:typeface="serif"
+            android:textSize="16sp"
+            android:hint="              请输入要翻译的内容"
+            android:textColorHint="d4d4d4" />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -92,7 +96,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="268dp"
         android:layout_marginEnd="62dp"
-        android:background="#FFC0CB"
+        android:background="000000"
         android:orientation="horizontal"
         android:padding="16dp">
 
