--- a/app/src/main/res/layout/camera_translation.xml
+++ b/app/src/main/res/layout/camera_translation.xml
@@ -10,36 +10,32 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- 导航框 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ededed"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            android:gravity="center_vertical|center_horizontal">
+    <!-- 第一个布局文件的内容 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#ededed"
+        android:padding="16dp">
 
-            <!-- 左侧标题 -->
-            <TextView
-                android:layout_width="351dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/greeting_message"
-                android:typeface="serif"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
+        <!-- 导航栏的标题 -->
 
         <!-- 分割线 -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:text="   Photo Translation"
+            android:textColor="#000000"
+            android:textSize="28sp"
+            android:lineSpacingMultiplier="1.2"
+            android:textStyle="bold" />
+
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="2dp"
             android:background="#808080" />
-
     </LinearLayout>
 
 
