--- a/app/src/main/res/layout/my_management.xml
+++ b/app/src/main/res/layout/my_management.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- 第一个布局文件的内容 -->
     <LinearLayout
@@ -18,116 +19,131 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:text="    Home "
+            android:text="    Profile"
             android:textColor="#000000"
             android:textSize="28sp"
             android:lineSpacingMultiplier="1.2"
             android:textStyle="bold" />
 
         <View
-            android:id="@+id/titleDividerNoCustom"
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="#808080" />
     </LinearLayout>
 
-    <!-- 分割线 -->
-    <View
-        android:id="@+id/divider"
+    <!-- 第二个布局文件的内容 -->
+    <!-- 底部导航栏 -->
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/navigation_bar"
-        android:background="#FFFFFF" />
-
-    <!-- 翻译搜索框 -->
-
-    <!-- 底部按钮 -->
-
-
-    <LinearLayout
-        android:id="@+id/search_bar"
-        android:layout_width="374dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/divider"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-282dp"
-        android:layout_marginEnd="21dp"
-        android:background="#c7c7c7"
-        android:orientation="horizontal"
+        android:layout_height="608dp"
+        android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- 搜索图标 -->
         <ImageView
-            android:id="@+id/search_icon"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:src="@drawable/ic_search_black_24dp" />
+            android:id="@+id/profile_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:background="#ededed" />
 
-        <!-- 搜索按钮 -->
         <TextView
-            android:id="@+id/language_selector"
-            android:layout_width="5dp"
-            android:layout_height="22dp"
-
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="15sp"
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:text="John Doe"
+            android:textSize="18sp"
             android:textStyle="bold" />
-        <!-- 翻译输入框 -->
-        <EditText
-            android:id="@+id/search_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:typeface="serif"
-            android:textSize="16sp"
-            android:hint="              请输入要翻译的内容"
-            android:textColorHint="d4d4d4" />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/navigation_bar"
-        android:layout_width="283dp"
-        android:layout_height="157dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="268dp"
-        android:layout_marginEnd="62dp"
-        android:background="000000"
-        android:orientation="horizontal"
-        android:padding="16dp">
-
-        <!-- 选择翻译前的语言的下拉框 -->
-        <Spinner
-            android:id="@+id/text_language_spinner"
+        <TextView
+            android:id="@+id/email_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center_horizontal"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/spinner_background" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4dp"
+            android:text="john.doe@example.com"
+            android:textSize="14sp" />
 
-        <!-- 中间文本视图 -->
 
-        <!-- 选择翻译后的语言的下拉框 -->
-
-        <!-- 右侧更多选项 -->
-
-        <!-- 中间图标 -->
-        <ImageView
-            android:id="@+id/translate_icon"
-            android:layout_width="wrap_content"
+        <!-- 中间区域按钮 -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="24dp"
-            android:src="@drawable/translate_icon" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/translated_language_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/spinner_background" />
+            <Button
+                android:id="@+id/edit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/ic_edit"
+                android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="100dp"
+                android:text="编辑资料" />
 
+
+            <!-- 下载离线翻译包按钮 -->
+            <Button
+                android:id="@+id/offline_translation_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:drawableLeft="@drawable/ic_download"
+                android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="100dp"
+                android:text="离线翻译" />
+
+            <!-- 隐私设置按钮 -->
+            <Button
+                android:id="@+id/privacy_settings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:drawableLeft="@drawable/ic_personalset"
+                android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="100dp"
+                android:text="隐私设置" />
+
+            <!-- 选择语言按钮 -->
+            <Button
+                android:id="@+id/select_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:drawableLeft="@drawable/ic_select"
+                android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="100dp"
+                android:text="选择语言" />
+
+
+            <!-- 投诉建议按钮 -->
+            <Button
+                android:id="@+id/feedback_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:drawableLeft="@drawable/ic_feedback"
+                android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="100dp"
+                android:text="投诉建议" />
+
+            <Button
+                android:id="@+id/logout_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:drawableLeft="@drawable/ic_exit"
+                android:drawableRight="@drawable/ic_to"
+                android:drawablePadding="100dp"
+                android:text="退出账号" />
+        </LinearLayout>
+            <!-- 其他底部按钮可以在这里添加，与主页布局类似 -->
     </LinearLayout>
 
     <LinearLayout
@@ -135,9 +151,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#EDEDED"
+        android:background="#ededed"
         android:orientation="horizontal"
-        android:paddingVertical="8dp">
+        android:paddingVertical="5dp">
 
         <!-- 首页按钮 -->
         <LinearLayout
@@ -250,4 +266,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
