--- a/app/src/main/res/drawable/colors.xml
+++ b/app/src/main/res/drawable/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="your_hint_color">#dcffff</color>
 </resources>
