更新了log_in,register和其他页面功能的前端实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/navigation_bar"
         android:background="#FFFFFF" />
-
-    <!-- 翻译搜索框 -->
-
-    <!-- 底部按钮 -->
 
 
     <LinearLayout
@@ -151,13 +146,14 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_home_black_24dp" />
+                android:src="@drawable/ic_home_blue_24dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="首页"
-                android:textColor="#000000"
+                android:textColor="#0044cc"
+                android:textStyle="bold"
                 android:textSize="12sp" />
         </LinearLayout>
 
