--- a/app/src/main/res/layout/camera_translation.xml
+++ b/app/src/main/res/layout/camera_translation.xml
@@ -5,10 +5,6 @@
     android:layout_height="match_parent"
     android:background="">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
     <!-- 第一个布局文件的内容 -->
     <LinearLayout
@@ -219,13 +215,14 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_camera_alt_black_24dp" />
+                    android:src="@drawable/ic_camera_alt_blue_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="拍照"
-                    android:textColor="#000000"
+                    android:textColor="#0044cc"
+                    android:textStyle="bold"
                     android:textSize="12sp" />
             </LinearLayout>
 
