--- a/app/src/main/res/layout/my_management.xml
+++ b/app/src/main/res/layout/my_management.xml
@@ -252,17 +252,21 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <!-- ImageView的背景设置为深蓝色 -->
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_person_black_24dp" />
 
+                android:src="@drawable/ic_person_blue_24dp" />
+
+            <!-- TextView的文字颜色设置为深蓝色 -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="我的"
-                android:textColor="#000000"
-                android:textSize="12sp" />
+                android:textStyle="bold"
+                android:textColor="#0044cc"
+            android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
