--- a/app/src/main/res/layout/suggestions.xml
+++ b/app/src/main/res/layout/suggestions.xml
@@ -64,9 +64,10 @@
         android:layout_marginTop="44dp"
         android:background="@drawable/button_background"
         android:text="提交"
+        android:textSize="18sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/til_contact"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="20dp" />
 
     <!-- 其他视图和约束 -->
 
