--- a/app/src/main/res/layout/edit_info.xml
+++ b/app/src/main/res/layout/edit_info.xml
@@ -71,6 +71,33 @@
             android:inputType="phone" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
+    <!-- 头像区域 -->
+    <FrameLayout
+        android:id="@+id/layout_avatar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/til_phone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <ImageView
+            android:id="@+id/img_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_default_avatar" />
+
+        <ImageButton
+            android:id="@+id/btn_change_avatar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="bottom|end"
+            android:background="@drawable/ic_edit"
+        android:contentDescription="@string/change_avatar" />
+    </FrameLayout>
+
     <!-- 提交按钮 -->
     <Button
         android:id="@+id/btn_submit"
@@ -80,7 +107,6 @@
         android:background="@drawable/button_background"
         android:text="提交"
         android:textSize="22sp"
-    android:textColor="@color/white"
-    app:layout_constraintTop_toBottomOf="@id/til_phone" />
-
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/layout_avatar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
