更新了多个界面的前端实现

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,4 +6,5 @@
     <color name="dividerColor">#1F000000</color>
     <color name="listDividerColor">#E0E0E0</color>
     <color name="buttonTextColor">#000000</color>
+    <color name="imagePlaceholderColor">#E0E0E0</color>
 </resources>
