--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <!-- 第一个布局文件的内容 -->
@@ -83,8 +84,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:layout_constraintTop_toTopOf="parent"
-        android:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
 
 
@@ -95,12 +96,11 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:cardCornerRadius="8dp"
-            android:cardElevation="4dp"
-            android:cardMaxElevation="4dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            app:cardMaxElevation="4dp"
             android:clickable="true"
-            android:focusable="true"
-            app:cardUseCompatPadding="true">
+            android:focusable="true">
 
             <Button
                 android:id="@+id/log_button"
@@ -123,10 +123,10 @@
         android:id="@+id/bottom_spacer"
         android:layout_width="0dp"
         android:layout_height="270dp"
-        android:layout_constraintTop_toBottomOf="@+id/bottom_navigation"
-        android:layout_constraintLeft_toLeftOf="parent"
-        android:layout_constraintRight_toRightOf="parent"
-        android:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />
+        app:layout_constraintTop_toBottomOf="@+id/bottom_navigation"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />
 
     <LinearLayout
         android:id="@+id/bottom_navigation"
@@ -135,7 +135,7 @@
         android:layout_alignParentBottom="true"
         android:background="#ededed"
         android:orientation="horizontal"
-        android:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:paddingVertical="5dp">
 
         <!-- 首页按钮 -->
