更新了多个界面的前端实现

--- a/app/src/main/res/layout/camera_translation.xml
+++ b/app/src/main/res/layout/camera_translation.xml
@@ -110,7 +110,9 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardView"></ImageView>
+            app:layout_constraintTop_toBottomOf="@id/cardView">
+
+        </ImageView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
