--- a/app/src/main/res/layout/voice_translation.xml
+++ b/app/src/main/res/layout/voice_translation.xml
@@ -76,35 +76,39 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinner_source_language"
+            <!-- 语言选择区域 -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="50dp"
-                android:background="@drawable/spinner_background"
-                android:prompt="@string/source_language_prompt" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="10dp"
-                android:text="👇"
-                android:textColor="#000000"
-                android:textSize="28sp"
-                android:lineSpacingMultiplier="1.2"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
 
-            <!-- 翻译后语言选择下拉栏 -->
-            <Spinner
-                android:id="@+id/spinner_target_language"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/spinner_background"
-                android:prompt="@string/target_language_prompt" />
+
+                <Spinner
+                    android:id="@+id/spinner_source_language"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/spinner_background"
+                    android:padding="8dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:text="→"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/spinner_target_language"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/spinner_background"
+                    android:padding="8dp" />
+            </LinearLayout>
+
 
 
             <!-- 翻译结果展示区域 -->
