--- a/app/src/main/res/layout/find_key.xml
+++ b/app/src/main/res/layout/find_key.xml
@@ -6,6 +6,7 @@
     android:background="#ededed"
     android:padding="16dp">
 
+
     <!-- 导航栏 -->
     <LinearLayout
         android:id="@+id/navigation_bar"
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="#ededed"
-        android:padding="16dp"
+        android:padding="30dp"
         android:gravity="center_vertical">
 
         <!-- 这里可以放置返回按钮或其他导航元素 -->
@@ -21,15 +22,14 @@
 
     <!-- 忘记密码内容 -->
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="450dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/navigation_bar"
-        android:layout_above="@id/bottom_navigation"
         android:layout_marginBottom="16dp"
         android:padding="8dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/custom_edittext_border"
@@ -47,7 +47,7 @@
             <!-- 账号输入框 -->
             <EditText
                 android:id="@+id/et_account"
-                android:layout_width="match_parent"
+                android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:hint="账号"
                 android:inputType="textEmailAddress"
@@ -89,21 +89,20 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/button_background" />
 
+            <!-- 返回按钮 -->
+            <Button
+                android:id="@+id/btn_forget"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="放弃"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background" />
+
         </LinearLayout>
 
     </ScrollView>
-
-    <!-- 底部导航 -->
-    <LinearLayout
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#ededed"
-        android:orientation="horizontal"
-        android:paddingVertical="8dp">
-
-        <!-- 这里的内容与您提供的布局文件中的bottom_navigation部分相同 -->
-    </LinearLayout>
 
 </RelativeLayout>
