--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -7,6 +7,7 @@
     android:padding="16dp">
 
     <!-- 标题栏 -->
+
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
@@ -126,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:background="@drawable/button_background"
-        android:text="保存"
+        android:text="退出"
         android:textSize="22sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/card_privacy" />
