--- a/app/src/main/res/layout/suggestions.xml
+++ b/app/src/main/res/layout/suggestions.xml
@@ -9,20 +9,36 @@
     android:padding="16dp">
 
     <!-- 标题栏 -->
+
+    <!-- 描述输入框 -->
+
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="51dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_background"
+        android:padding="16dp"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="VectorDrawable" />
+
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="投诉与建议"
         android:textColor="#000000"
         android:textSize="26sp"
         android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.397"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- 描述输入框 -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_description"
         android:layout_width="match_parent"
@@ -53,7 +69,7 @@
             android:id="@+id/et_contact"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="    联系邮箱（选填）"
+            android:hint="    联系邮箱"
             android:background="@drawable/custom_edittext_border"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
